--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,11 +19,17 @@
   </nav>
   <p><small>Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small></p>
 </footer>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-<script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
+
 <script src="https://npmcdn.com/imagesloaded@4.1/imagesloaded.pkgd.min.js"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/2.0.1/lazysizes.min.js" async=""></script> -->
+<script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/zoom.js/0.0.1/zoom.min.js"></script>
 {% if site.github %}
 <script src="{{ site.baseurl }}dist/js/main.min.js"></script>
 <script>
