--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -43,17 +43,15 @@ footer, main::after {
 
 footer {
   width: 100%;
-  line-height: 1.4;
-  padding-left:  1.6rem;
-  padding-right: 1.6rem;
+  padding: 1.6rem;
 }
 
 /* ---- isotope ---- */
 
 .grid {
   position: relative;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: -.8rem;
+  margin-right: -.8rem;
 }
 
 /* clear fix */
@@ -73,6 +71,7 @@ footer {
 .grid-item {
   position: relative;
   float: left;
+  border: solid .8rem transparent;
 }
 
 .grid-item > * {
@@ -80,7 +79,7 @@ footer {
   padding: 0;
 }
 
-.grid-item > figure {
+.grid-item {
   position: relative;
 
   .overlay {
@@ -89,7 +88,7 @@ footer {
     right: 0;
     top: 0;
     bottom: 0;
-    opacity: .95;
+    opacity: .9;
     transition: all 300ms;
   }
 
@@ -120,62 +119,67 @@ footer {
   .overlay.travel.artifact       { background: #FF7F50} // Coral
 
 
-  .overlay.artifact              { background: #0074D9} // Red
+  .overlay.artifact              { background: #FF4136} // Red
   .overlay.artifact.street       { background: #85144b} // Maroon
   .overlay.artifact.architecture { background: #3D9970} // Olive
   .overlay.artifact.nature       { background: #01FF70} // Lime
   .overlay.artifact.travel       { background: #FF7F50} // Coral
 
-
   &:hover {
-    cursor: zoom-in;
 
     .overlay {
-      opacity: .1;
+      opacity: 0;
+      transform: translate3d(0,0,0);
+      transition: opacity 300ms;
+    }
+  }
+
+  figure {
+    color: #CCC;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
       transition: all 300ms;
     }
-  }
 
-  img {
-    display: block;
-    width: 100%;
-    z-index: -10;
-  }
-
-  figcaption {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-
-    .name {
+    figcaption {
       position: absolute;
-      left: 1.6rem;
-      bottom: 3.2rem;
-      font-weight: normal;
-    }
-
-    .symbol {
-      position: absolute;
-      left: 1.6rem;
+      left: 0;
+      right: 0;
       top: 0;
-      font-size: 4em;
-      font-weight: bold;
-      color: white;
-    }
-
-    .number {
-      position: absolute;
-      right: 1.6rem;
-      top: 1.6rem;
-    }
-
-    .year {
-      position: absolute;
-      left: 1.6rem;
       bottom: 0;
-      font-size: 80%;
+      transition: all 300ms;
+
+      .name {
+        position: absolute;
+        left: 1.6rem;
+        bottom: 3.2rem;
+        font-weight: normal;
+      }
+
+      .symbol {
+        position: absolute;
+        left: 1.6rem;
+        top: 0;
+        font-size: 4em;
+        font-weight: bold;
+        color: white;
+      }
+
+      .number {
+        position: absolute;
+        right: 1.6rem;
+        top: 1.6rem;
+      }
+
+      .year {
+        position: absolute;
+        left: 1.6rem;
+        bottom: 0;
+        font-size: 80%;
+      }
     }
   }
 }
