--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -63,7 +63,28 @@ footer {
 
 .grid-sizer,
 .grid-item {
-  width: 25%;
+  width: 100%;
+}
+
+@media (min-width: 450px) {
+  .grid-sizer,
+  .grid-item {
+    width: 50%;
+  }
+}
+
+@media (min-width: 960px) {
+  .grid-sizer,
+  .grid-item {
+    width: 33.333333%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .grid-sizer,
+  .grid-item {
+    width: 25%;
+  }
 }
 
 /* ---- .grid-item ---- */
