--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,20 +1,15 @@
-<nav  class="navbar navbar-inverse navbar-fixed-top wow fadeIn" data-headroom data-tolerance="10" data-offset="320" data-classes='{"initial":"animated","pinned":"translateDown","unpinned":"translateUp","top":"navbar-inverse","notTop":"navbar-default"}'>
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#content" data-scroll="smooth">Studiocraft</a>
-    </div>
-    <div class="collapse navbar-collapse" id="mobileNav">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about" data-scroll="smooth">About</a></li>
-        <!-- <li><a href="#projects" data-scroll="smooth">Projects</a></li> -->
-        <li><a href="#contact" data-scroll="smooth">Contact</a></li>
+<nav class="navigation-main" data-headroom data-tolerance="10" data-offset="320" data-classes='{"initial":"animated","pinned":"translateDown","unpinned":"translateUp","top":"navbar-inverse","notTop":"navbar-default"}'>
+  <header>
+  <img class="logo" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg">
+    <nav id="filters">
+      <ul>
+        <li><a href="javascript:void(0)" data-filter="*" class="active"><i class="fa fa-fw fa-refresh" aria-hidden="true"></i></a></li>
+        <li><a href="javascript:void(0)" data-filter="[data-category~='street']">Street</a></li>
+        <li><a href="javascript:void(0)" data-filter="[data-category~='architecture']">Architecture</a></li>
+        <li><a href="javascript:void(0)" data-filter="[data-category~='nature']">Nature</a></li>
+        <li><a href="javascript:void(0)" data-filter="[data-category~='travel']">Travel</a></li>
+        <li><a href="javascript:void(0)" data-filter="[data-category~='artifact']">Artifact</a></li>
       </ul>
-    </div>
-  </div>
+    </nav>
+  </header>
 </nav>
