--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 * {
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -170,7 +171,8 @@ ol {
 }
 
 main {
-  position: relative;
+  padding-top: 12.2rem;
+  padding-bottom: 0;
   padding-left: 1.6rem;
   padding-right: 1.6rem;
   margin-bottom: -10rem;
@@ -197,11 +199,6 @@ nav ul > li:first-child {
   margin-left: 0;
 }
 
-header {
-  padding-top: 1.6rem;
-  padding-bottom: 1.6rem;
-}
-
 footer,
 main::after {
   height: 10rem;
@@ -210,6 +207,21 @@ main::after {
 footer {
   width: 100%;
   padding: 1.6rem;
+}
+
+.navigation-main {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  padding: 1.6rem;
+  padding-top: 2.4rem;
+  background-color: #EEEEEE;
+  z-index: 420;
+}
+.navigation-main nav > ul {
+  margin: 0;
 }
 
 /* ---- isotope ---- */
@@ -354,8 +366,20 @@ footer {
           transform: translate3d(0, 0, 0);
   transition: opacity 300ms;
 }
+.grid-item:hover figure {
+  color: #111111;
+}
+.grid-item:hover figure img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  transition: all 300ms;
+}
+.grid-item:hover figure figcaption {
+  z-index: 0;
+}
 .grid-item figure {
-  color: #CCCCCC;
+  color: #111111;
 }
 .grid-item figure img {
   display: block;
@@ -389,6 +413,11 @@ footer {
   position: absolute;
   right: 1.6rem;
   top: 1.6rem;
+}
+.grid-item figure figcaption .category {
+  position: absolute;
+  right: 1.6rem;
+  top: 3.6rem;
 }
 .grid-item figure figcaption .year {
   position: absolute;
