--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -3,6 +3,7 @@
 // Update the foundational and global aspects of the page.
 
 * {
+  margin: 0;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
