--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,7 @@
 <nav class="navigation-main" data-headroom data-tolerance="10" data-offset="320" data-classes='{"initial":"animated","pinned":"translateDown","unpinned":"translateUp","top":"navbar-inverse","notTop":"navbar-default"}'>
   <header>
-  <img class="logo" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg">
+    <h1 class="logo">Studiocraft</h1>
+  <!-- <img class="logo" src="{{ site.baseurl }}/assets/svg/studiocraft-logo.svg"> -->
     <nav id="filters">
       <ul>
         <li><a href="javascript:void(0)" data-filter="*" class="active"><i class="fa fa-fw fa-refresh" aria-hidden="true"></i></a></li>
