--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,213 +1,172 @@
 * {
   margin: 0;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 html,
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
-}
+  height: 100%; }
 
 html {
-  font-family: 'source-code-pro',sans-serif;
+  font-family: "source-code-pro",sans-serif;
   line-height: 1.4;
-  font-size: 62.5%;
-}
+  font-size: 62.5%; }
 
 body {
   color: #333333;
   font-size: 1.6rem;
-  background-color: #EEEEEE;
-          text-size-adjust: 100%;
+  background-color: #eeeeee;
+  text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
-}
+  -ms-text-size-adjust: 100%; }
 
 a {
   color: #333333;
   font-weight: 700;
   text-transform: uppercase;
-  text-decoration: none;
-}
-@media screen and (min-width: 38rem) {
-  a {
-    letter-spacing: 0.1rem;
-  }
-}
-a:hover,
-a:focus {
-  color: #222222;
-  text-decoration: underline;
-}
-a:active,
-a:visited {
-  color: #2A2A2A;
-  text-decoration: underline;
-}
+  text-decoration: none; }
+  @media screen and (min-width: 38rem) {
+    a {
+      letter-spacing: .1rem; } }
+  a:hover, a:focus {
+    color: #222222;
+    text-decoration: underline; }
+  a:active, a:visited {
+    color: #2a2a2a;
+    text-decoration: underline; }
 
 img {
   display: block;
-  width: 100%;
-}
-img.logo {
-  max-width: 48rem;
-  margin-bottom: 1.6rem;
-}
+  width: 100%; }
+  img.logo {
+    max-width: 48rem;
+    margin-bottom: 1.6rem; }
 
-img[data-action='zoom'] {
+.logo {
+  margin: 0;
+  font-size: 7.2rem;
+  line-height: 1;
+  text-transform: uppercase;
+  text-decoration: none; }
+
+img[data-action="zoom"] {
   cursor: pointer;
   cursor: -webkit-zoom-in;
-  cursor:    -moz-zoom-in;
-}
+  cursor: -moz-zoom-in; }
 
 .zoom-img,
 .zoom-img-wrap {
   position: relative;
   z-index: 666;
-  transition: all 300ms;
-}
+  transition: all 300ms; }
 
 img.zoom-img {
   cursor: pointer;
   cursor: -webkit-zoom-out;
-  cursor:    -moz-zoom-out;
-}
+  cursor: -moz-zoom-out; }
 
 .zoom-overlay {
   z-index: 420;
-  background: #FFFFFF;
+  background: #fff;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   pointer-events: none;
-  filter: 'alpha(opacity=0)';
+  filter: "alpha(opacity=0)";
   opacity: 0;
-  transition: opacity 300ms;
-}
+  transition: opacity 300ms; }
 
 .zoom-overlay-open .zoom-overlay {
-  filter: 'alpha(opacity=100)';
-  opacity: 1;
-}
+  filter: "alpha(opacity=100)";
+  opacity: 1; }
 
 .zoom-overlay-open,
 .zoom-overlay-transitioning {
-  cursor: default;
-}
+  cursor: default; }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-bottom: 0.5rem;
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: .5rem;
   line-height: 1.25;
   color: inherit;
-  text-rendering: optimizeLegibility;
-}
+  text-rendering: optimizeLegibility; }
 
 h1 {
-  font-size: 3.6rem;
-}
+  font-size: 3.6rem; }
 
 h2 {
   margin-top: 1rem;
-  font-size: 1.5rem;
-}
+  font-size: 1.5rem; }
 
 h3 {
   margin-top: 1.5rem;
-  font-size: 1.25rem;
-}
+  font-size: 1.25rem; }
 
-h4,
-h5,
-h6 {
+h4, h5, h6 {
   margin-top: 1rem;
-  font-size: 1rem;
-}
+  font-size: 1rem; }
 
 p {
   margin-top: 0;
-  margin-bottom: 1.6rem;
-}
+  margin-bottom: 1.6rem; }
 
 strong {
-  color: inherit;
-}
+  color: inherit; }
 
-ul,
-ol,
-dl {
+ul, ol, dl {
   margin-top: 0;
-  margin-bottom: 1rem;
-}
+  margin-bottom: 1rem; }
 
-ul,
-ol {
+ul, ol {
   list-style: none;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 ::-moz-selection {
   color: #FFFFFF;
-  background-color: #333333;
-}
+  background-color: #333333; }
 
 ::selection {
   color: #FFFFFF;
-  background-color: #333333;
-}
+  background-color: #333333; }
 
 ::moz-selection {
   color: #FFFFFF;
-  background-color: #333333;
-}
+  background-color: #333333; }
 
 main {
-  padding-top: 12.2rem;
+  padding-top: 12.6rem;
   padding-bottom: 0;
   padding-left: 1.6rem;
   padding-right: 1.6rem;
   margin-bottom: -10rem;
   margin-left: auto;
   margin-right: auto;
-  min-height: 100%;
-}
+  min-height: 100%; }
 
 main::after {
-  content: '';
-  display: block;
-}
+  content: "";
+  display: block; }
 
 nav ul {
   list-style: none;
   display: block;
-  margin-bottom: 1.6rem;
-}
-nav ul > li {
-  display: inline;
-  margin-left: 0.4rem;
-}
-nav ul > li:first-child {
-  margin-left: 0;
-}
+  margin-bottom: 1.6rem; }
+  nav ul > li {
+    display: inline;
+    margin-left: 0.4rem; }
+  nav ul > li:first-child {
+    margin-left: 0; }
 
 footer,
 main::after {
-  height: 10rem;
-}
+  height: 10rem; }
 
 footer {
   width: 100%;
-  padding: 1.6rem;
-}
+  padding: 1.6rem; }
 
 .navigation-main {
   position: fixed;
@@ -217,224 +176,170 @@ footer {
   width: 100%;
   padding: 1.6rem;
   padding-top: 2.4rem;
-  background-color: #EEEEEE;
-  z-index: 420;
-}
-.navigation-main nav > ul {
-  margin: 0;
-}
+  background-color: #EEE;
+  z-index: 420; }
+  .navigation-main nav > ul {
+    margin: 0; }
 
 /* ---- isotope ---- */
 .grid {
   position: relative;
-  margin-left: -0.8rem;
-  margin-right: -0.8rem;
-}
+  margin-left: -.8rem;
+  margin-right: -.8rem; }
 
 /* clear fix */
 .grid:after {
   content: '';
   display: block;
-  clear: both;
-}
+  clear: both; }
 
 .grid-sizer,
 .grid-item {
-  width: 100%;
-}
+  width: 100%; }
 
 @media (min-width: 450px) {
   .grid-sizer,
   .grid-item {
-    width: 50%;
-  }
-}
+    width: 50%; } }
 @media (min-width: 960px) {
   .grid-sizer,
   .grid-item {
-    width: 33.333333%;
-  }
-}
+    width: 33.333333%; } }
 @media (min-width: 1200px) {
   .grid-sizer,
   .grid-item {
-    width: 25%;
-  }
-}
+    width: 25%; } }
 /* ---- .grid-item ---- */
 .grid-item {
   position: relative;
   float: left;
-  border: solid 0.8rem transparent;
-}
+  border: solid .8rem transparent; }
 
 .grid-item > * {
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 .grid-item {
-  position: relative;
-}
-.grid-item .overlay {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  opacity: 0.9;
-  transition: all 300ms;
-}
-.grid-item .overlay.street {
-  background: #FFDC00;
-}
-.grid-item .overlay.street.architecture {
-  background: #FF851B;
-}
-.grid-item .overlay.street.nature {
-  background: #7FDBFF;
-}
-.grid-item .overlay.street.travel {
-  background: #B10DC9;
-}
-.grid-item .overlay.street.artifact {
-  background: #85144B;
-}
-.grid-item .overlay.architecture {
-  background: #CCFF00;
-}
-.grid-item .overlay.architecture.street {
-  background: #FF851B;
-}
-.grid-item .overlay.architecture.nature {
-  background: #2ECC40;
-}
-.grid-item .overlay.architecture.travel {
-  background: #001F3F;
-}
-.grid-item .overlay.architecture.artifact {
-  background: #3D9970;
-}
-.grid-item .overlay.nature {
-  background: #39CCCC;
-}
-.grid-item .overlay.nature.street {
-  background: #7FDBFF;
-}
-.grid-item .overlay.nature.architecture {
-  background: #2ECC40;
-}
-.grid-item .overlay.nature.travel {
-  background: #0074D9;
-}
-.grid-item .overlay.nature.artifact {
-  background: #01FF70;
-}
-.grid-item .overlay.travel {
-  background: #F012BE;
-}
-.grid-item .overlay.travel.street {
-  background: #B10DC9;
-}
-.grid-item .overlay.travel.architecture {
-  background: #001F3F;
-}
-.grid-item .overlay.travel.nature {
-  background: #0074D9;
-}
-.grid-item .overlay.travel.artifact {
-  background: #FF7F50;
-}
-.grid-item .overlay.artifact {
-  background: #FF4136;
-}
-.grid-item .overlay.artifact.street {
-  background: #85144B;
-}
-.grid-item .overlay.artifact.architecture {
-  background: #3D9970;
-}
-.grid-item .overlay.artifact.nature {
-  background: #01FF70;
-}
-.grid-item .overlay.artifact.travel {
-  background: #FF7F50;
-}
-.grid-item:hover .overlay {
-  opacity: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-  transition: opacity 300ms;
-}
-.grid-item:hover figure {
-  color: #111111;
-}
-.grid-item:hover figure img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  transition: all 300ms;
-}
-.grid-item:hover figure figcaption {
-  z-index: 0;
-}
-.grid-item figure {
-  color: #111111;
-}
-.grid-item figure img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  transition: all 300ms;
-}
-.grid-item figure figcaption {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  transition: all 300ms;
-}
-.grid-item figure figcaption .name {
-  position: absolute;
-  left: 1.6rem;
-  bottom: 3.2rem;
-  font-weight: normal;
-}
-.grid-item figure figcaption .symbol {
-  position: absolute;
-  left: 1.6rem;
-  top: 0;
-  font-size: 4em;
-  font-weight: bold;
-  color: white;
-}
-.grid-item figure figcaption .number {
-  position: absolute;
-  right: 1.6rem;
-  top: 1.6rem;
-}
-.grid-item figure figcaption .category {
-  position: absolute;
-  right: 1.6rem;
-  top: 3.6rem;
-}
-.grid-item figure figcaption .year {
-  position: absolute;
-  left: 1.6rem;
-  bottom: 0;
-  font-size: 80%;
-}
+  position: relative; }
+  .grid-item .overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    opacity: .9;
+    transition: all 300ms; }
+  .grid-item .overlay.street {
+    background: #FFDC00; }
+  .grid-item .overlay.street.architecture {
+    background: #FF851B; }
+  .grid-item .overlay.street.nature {
+    background: #7FDBFF; }
+  .grid-item .overlay.street.travel {
+    background: #B10DC9; }
+  .grid-item .overlay.street.artifact {
+    background: #85144b; }
+  .grid-item .overlay.architecture {
+    background: #CCFF00; }
+  .grid-item .overlay.architecture.street {
+    background: #FF851B; }
+  .grid-item .overlay.architecture.nature {
+    background: #2ECC40; }
+  .grid-item .overlay.architecture.travel {
+    background: #001F3F; }
+  .grid-item .overlay.architecture.artifact {
+    background: #3D9970; }
+  .grid-item .overlay.nature {
+    background: #39CCCC; }
+  .grid-item .overlay.nature.street {
+    background: #7FDBFF; }
+  .grid-item .overlay.nature.architecture {
+    background: #2ECC40; }
+  .grid-item .overlay.nature.travel {
+    background: #0074D9; }
+  .grid-item .overlay.nature.artifact {
+    background: #01FF70; }
+  .grid-item .overlay.travel {
+    background: #F012BE; }
+  .grid-item .overlay.travel.street {
+    background: #B10DC9; }
+  .grid-item .overlay.travel.architecture {
+    background: #001F3F; }
+  .grid-item .overlay.travel.nature {
+    background: #0074D9; }
+  .grid-item .overlay.travel.artifact {
+    background: #FF7F50; }
+  .grid-item .overlay.artifact {
+    background: #FF4136; }
+  .grid-item .overlay.artifact.street {
+    background: #85144b; }
+  .grid-item .overlay.artifact.architecture {
+    background: #3D9970; }
+  .grid-item .overlay.artifact.nature {
+    background: #01FF70; }
+  .grid-item .overlay.artifact.travel {
+    background: #FF7F50; }
+  .grid-item:hover .overlay {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    transition: opacity 300ms; }
+  .grid-item:hover figure {
+    color: #111; }
+    .grid-item:hover figure img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      transition: all 300ms; }
+    .grid-item:hover figure figcaption {
+      z-index: 0; }
+  .grid-item figure {
+    color: #111; }
+    .grid-item figure img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      transition: all 300ms; }
+    .grid-item figure figcaption {
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      transition: all 300ms; }
+      .grid-item figure figcaption .name {
+        position: absolute;
+        left: 1.6rem;
+        bottom: 3.2rem;
+        font-weight: normal; }
+      .grid-item figure figcaption .symbol {
+        position: absolute;
+        left: 1.6rem;
+        top: 0;
+        font-size: 4em;
+        font-weight: bold;
+        color: white; }
+      .grid-item figure figcaption .number {
+        position: absolute;
+        right: 1.6rem;
+        top: 1.6rem; }
+      .grid-item figure figcaption .category {
+        position: absolute;
+        right: 1.6rem;
+        top: 3.6rem; }
+      .grid-item figure figcaption .year {
+        position: absolute;
+        left: 1.6rem;
+        bottom: 0;
+        font-size: 80%; }
 
 .lazyload,
 .lazyloading {
-  opacity: 0;
-}
+  opacity: 0; }
 
 .lazyloaded {
   opacity: 1;
-  transition: opacity 300ms;
-}
+  transition: opacity 300ms; }
 
 .button,
 button {
@@ -457,19 +362,14 @@ button {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: 0.15rem solid #222222;
-  border-radius: 1.8rem;
-}
-@media (min-width: 38em) {
-  .button,
-  button {
-    letter-spacing: 0.1rem;
-  }
-}
+  border: .15rem solid #222222;
+  border-radius: 1.8rem; }
+  @media (min-width: 38em) {
+    .button,
+    button {
+      letter-spacing: .1rem; } }
 
-input[type='submit'],
-input[type='reset'],
-input[type='button'] {
+input[type='submit'], input[type='reset'], input[type='button'] {
   display: inline-block;
   padding: 1rem 1.6rem;
   margin-bottom: 0;
@@ -489,44 +389,31 @@ input[type='button'] {
           user-select: none;
   background-image: none;
   background-color: transparent;
-  border: 0.15rem solid #222222;
-  border-radius: 1.8rem;
-}
-@media (min-width: 38em) {
-  input[type='submit'],
-  input[type='reset'],
-  input[type='button'] {
-    letter-spacing: 0.1rem;
-  }
-}
+  border: .15rem solid #222222;
+  border-radius: 1.8rem; }
+  @media (min-width: 38em) {
+    input[type='submit'], input[type='reset'], input[type='button'] {
+      letter-spacing: .1rem; } }
 
 .button:hover,
 button:hover {
   text-decoration: none;
-  color: inherit;
-}
+  color: inherit; }
 
-input[type='submit']:hover,
-input[type='reset']:hover,
-input[type='button']:hover {
+input[type='submit']:hover, input[type='reset']:hover, input[type='button']:hover {
   text-decoration: none;
-  color: inherit;
-}
+  color: inherit; }
 
 .button:focus,
 button:focus {
   text-decoration: none;
   color: inherit;
-  outline: 0;
-}
+  outline: 0; }
 
-input[type='submit']:focus,
-input[type='reset']:focus,
-input[type='button']:focus {
+input[type='submit']:focus, input[type='reset']:focus, input[type='button']:focus {
   text-decoration: none;
   color: inherit;
-  outline: 0;
-}
+  outline: 0; }
 
 
 
