--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -65,6 +65,13 @@ img {
   }
 }
 
+.logo {
+  margin: 0;
+  font-size: 7.2rem;
+  line-height: 1;
+  text-transform: uppercase;
+  text-decoration: none;
+}
 
 img[data-action="zoom"] {
   cursor: pointer;
