--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,25 @@
-<footer>
-  <nav>
-    <ul>
-      <li>
-        <a href="#" title="RSS"><i class="fa fa-fw fa-rss" aria-hidden="true"></i></a>
+<footer class="w-100 ph3 ph4-ns pv4 pv6-ns wow animated fadeInUp">
+ <nav class="w-100 db">
+    <ul class="list pl0">
+      <li class="dib mr2">
+        <a class="link underline-hover dark-gray b ttu" href="#">LinkedIn</i></a>
       </li>
-      <li>
-        <a href="#" title="Twitter"><i class="fa fa-fw fa-twitter" aria-hidden="true"></i></a>
+      <li class="dib mr2">
+        <a class="link underline-hover dark-gray b ttu" href="#">Twitter</a>
       </li>
-      <li>
-        <a href="#" title="Google Plus"><i class="fa fa-fw fa-google-plus" aria-hidden="true"></i></a>
+      <li class="dib mr2">
+        <a class="link underline-hover dark-gray b ttu" href="#">GitHub</a>
       </li>
-      <li>
-        <a href="#" title="Instagram"><i class="fa fa-fw fa-instagram" aria-hidden="true"></i></a>
-      </li>
-      <li><a href="mailto:hello@studiocraft.cc"><small>Contact</small></a></li>
-      <li><a href="{{ site.baseurl }}/imprint/"><small>Imprint</small></a></li>
+    </ul>
+    <ul class="list pl0">
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/imprint/"><small>Imprint</small></a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/imprint/"><small>Site Index</small></a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/imprint/"><small>Terms of Use</small></a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/imprint/"><small>Privacy</small></a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/imprint/"><small>License</small></a></li>
     </ul>
   </nav>
-  <p><small>Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small></p>
+  <small class="w-100 db measure mv2">Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small>
+  <small class="w-100 db measure mv4">Made in NY</small>
+  <a class="db link underline-hover gray" href="{{ site.baseurl }}#content"><small>Back to Top</small></a>
 </footer>
