--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,8 +1,25 @@
-// Imports
-@import 'base';
-@import 'type';
-@import 'layout';
+// // Imports
+// @import 'base';
+// @import 'type';
+// @import 'layout';
+//
+// // Components
+// @import 'buttons';
+// @import 'overlay';
 
-// Components
-@import 'buttons';
-@import 'overlay';
+[data-action='cursor'] {
+  &::after {
+    content: '_';
+    display: inline;
+    line-height: inherit;
+    animation: blinking 1s infinite;
+    position: absolute;
+    transform: translate(10%, -10%);
+  }
+}
+
+@keyframes blinking {
+  0% {opacity: 0;}
+  50% { opacity: 1;}
+  100% {opacity: 0;}
+}
