--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -17,7 +17,7 @@ body {
 }
 
 html {
-  font-family: "source-code-pro",sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'avenir next', avenir, helvetica, 'helvetica neue', ubuntu, roboto, noto, 'segoe ui', arial, sans-serif;
   line-height: 1.4;
   font-size: 62.5%
 }
