--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,18 @@
-<header class="w-100 ph3 ph4-ns pv5 pv7-ns bg-yellow relative">
-  <h1 class="f1 f-5-m f-6-l lh-title ma0" data-action="cursor">{{ site.title }}</h1>
+<header class="w-100 ph3 ph4-ns pv5 pv6-ns bg-yellow">
+  <h1 class="f1 f-subheadline-m f-headline-l lh-title mv1 mv3-ns tracked-tight" data-action="cursor">{{ site.title }}</h1>
+  <h2 class="f3 f2-ns mv0 lh-cop measure-narrow">Professional &amp; affordable web services for any project.</h2>
   <nav class="wow animated fadeIn">
-     <ul class="list pl0">
+    <ul class="list pa0 mv4">
       <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}#strategy">Strategy</a></li>
       <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}#design">Design</a></li>
       <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}#technology">Technology</a></li>
-     </ul>
-   </nav>
-   <div class="absolute bottom-2 db wow animated fadeInUp">
-      <ul class="list pl0">
-        <li class="dib mr2"><a class="link underline-hover dark-gray" href="mailto:hello@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope"></i></abbr>hello@studiocraft.cc</a></li>
-        <li class="dib mr2"><a class="link underline-hover dark-gray" href="tel:760-265-1232"><abbr title="Phone"><i class="fa fa-fw fa-phone"></i></abbr>(760) 265-1232</a></li>
-        <li class="dib mr2"><a class="link underline-hover dark-gray" href="tel:760-265-1232"><abbr title="Location"><i class="fa fa-fw fa-map-marker"></i></abbr>New York, NY</a></li>
-      </ul>
-    </div>
+    </ul>
+  </nav>
+  <address class="fs-normal wow animated fadeInUp">
+    <ul class="list pa0 mv4">
+      <li class="dib mr2"><a class="link underline-hover dark-gray" href="mailto:hello@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i></abbr>hello@studiocraft.cc</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray" href="tel:760-265-1232"><abbr title="Phone"><i class="fa fa-fw fa-phone" aria-hidden="true"></i></abbr>(760) 265-1232</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray" href="https://goo.gl/maps/ePAZK239wrC2" target="_blank"><abbr title="Location"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>New York, NY</a></li>
+    </ul>
+  </address>
 </header>
