--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   {% include css/css.html %}
   {% include js/js.html %}
   </head>
-  <body id="{{ page.slug }}" class="w-100 sans-serif dark-gray">
+  <body class="{{ page.slug }} w-100 sans-serif dark-gray">
     <main id="content" class="w-100">
     {% include header.html %}
     {{ content }}
