--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
     <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/privacy-policy/"><small>Privacy Policy</small></a></li>
     <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/license/"><small>MIT License</small></a></li>
   </ul>
-  <small class="w-100 db measure mv2">Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} Studiocraft. All rights reserved.</small>
+  <small class="w-100 db measure mv2 lh-copy">Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved.</small>
   <small class="w-100 db measure mv4">Made in NY</small>
   <a class="db link underline-hover gray" href="{{ site.baseurl }}#content"><small>Back to Top</small></a>
 </footer>
