--- a/_includes/css/vendor-css.html
+++ b/_includes/css/vendor-css.html
@@ -1,3 +1,5 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet">
 <link href="https://unpkg.com/tachyons@4.5.3/css/tachyons.min.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet"/>
+<link href="https://unpkg.com/flickity@2.0/dist/flickity.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css" rel="stylesheet" >
