--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <header class="w-100 ph3 ph4-ns pv5 pv6-ns bg-yellow">
   <nav class="wow animated fadeIn">
     <ul class="list pa0 mv0">
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}">{{ site.title }}</a></li>
+      <li class="dib mr2"><i class="fa fa-fw fa-long-arrow-left"></i><a class="link underline-hover dark-gray b ttu" href="{{ site.url }}">{{ site.title }}</a></li>
     </ul>
   </nav>
   <h1 class="f1 f-subheadline-m f-headline-l lh-title mv1 mv3-ns tracked-tight" data-action="cursor">{{ page.title }}</h1>
