--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
   <h2 class="f3 f2-ns mv0 lh-cop measure-narrow">Professional &amp; affordable web services for any project.</h2>
   <nav class="wow animated fadeIn">
     <ul class="list pa0 mv4">
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}#strategy">Strategy</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}#design">Design</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}#technology">Technology</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#strategy" data-scroll>Strategy</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#design" data-scroll>Design</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#technology" data-scroll>Technology</a></li>
     </ul>
   </nav>
   <address class="fs-normal wow animated fadeInUp">
