--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,5 +18,5 @@
   </ul>
   <small class="w-100 db measure mv2 lh-copy">Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved.</small>
   <small class="w-100 db measure mv4">Made in NY</small>
-  <a class="db link underline-hover gray" href="{{ site.baseurl }}#content"><small>Back to Top</small></a>
+  <a class="db link underline-hover gray" href="#content" data-scroll><small>Back to Top</small></a>
 </footer>
