--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-hidden">
   <head>
   {% include meta.html %}
   {% include css/css.html %}
   {% include js/js.html %}
   </head>
   <body class="{{ page.slug }} w-100 sans-serif dark-gray">
+    <div class="fixed absolute--fill bg-white z-9999" id="loaderOverlay">
+      <span class="db right-0 ma3">
+        <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw"></i>
+      </span>
+    </div>
     <main id="content" class="w-100">
     {% unless page.layout == 'page' %}
     {% include header.html %}
