--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
   {% include css/css.html %}
   {% include js/js.html %}
   </head>
-  <body class="{{ page.slug }} w-100 sans-serif tk-proxima-nova dark-gray">
+  <body class="{{ page.slug }} w-100 tk-proxima-nova dark-gray">
     <div class="fixed absolute--fill bg-white z-9999" id="loaderOverlay">
       <span class="db right-0 ma3">
-        <i class="fa fa-circle-o-notch fa-spin fa-3x fa-fw"></i>
+        <i class="fa fa-circle-o-notch fa-spin fa-lg fa-fw"></i>
       </span>
     </div>
     <main id="content" class="w-100">
