--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,9 +12,9 @@
   </ul>
   <ul class="list pl0">
     <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/sitemap/"><small>Sitemap</small></a></li>
-    <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/terms-of-use/"><small>Terms of Use</small></a></li>
-    <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/privacy-policy/"><small>Privacy Policy</small></a></li>
-    <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/license/"><small>MIT License</small></a></li>
+    <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="terms-of-use.html"><small>Terms of Use</small></a></li>
+    <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="privacy-policy.html"><small>Privacy Policy</small></a></li>
+    <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="license.html"><small>MIT License</small></a></li>
   </ul>
   <small class="w-100 db measure mv2 lh-copy">Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved.</small>
   <small class="w-100 db measure mv4">Made in NY</small>
