--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,18 @@
+[data-media='bg-video'] {
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+      -ms-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  background-position: center right;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
 [data-action='cursor']::after {
   content: '_';
   display: inline;
