--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="w-100 ph3 ph4-ns pv4 pv6-ns wow animated fadeInUp">
-  <ul class="list pl0">
+  <ul class="list pl0 lh-copy">
     <li class="dib mr2">
-      <a class="link underline-hover dark-gray b ttu" href="#">LinkedIn</i></a>
+      <a class="link underline-hover dark-gray b ttu" href="#">LinkedIn</a>
     </li>
     <li class="dib mr2">
       <a class="link underline-hover dark-gray b ttu" href="#">Twitter</a>
@@ -10,7 +10,7 @@
       <a class="link underline-hover dark-gray b ttu" href="#">GitHub</a>
     </li>
   </ul>
-  <ul class="list pl0">
+  <ul class="list pl0 lh-copy">
     <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/sitemap.html"><small>Sitemap</small></a></li>
     <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/terms-of-use.html"><small>Terms of Use</small></a></li>
     <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/privacy-policy.html"><small>Privacy Policy</small></a></li>
