--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,6 @@
+{% if page.layout == 'page' %}
+{% include contact.html %}
+{% endif %}
 <footer class="w-100 ph3 ph4-ns pv4 pv6-ns wow animated fadeInUp">
   <ul class="list pl0 lh-copy">
     <li class="dib mr2">
