--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <header class="w-100 ph3 ph4-ns pv5 pv6-ns bg-yellow">
   <h1 class="f1 f-subheadline-m f-headline-l lh-title mv1 mv3-ns tracked-tight" data-action="cursor">{{ site.title }}</h1>
-  <!-- <h2 class="f3 f2-ns mv0 lh-cop measure-narrow">Professional &amp; affordable web services for any project.</h2>
+  <h2 class="f3 f2-ns mv0 lh-cop measure-narrow">Professional &amp; affordable art services for any project.</h2>
   <nav class="wow animated fadeIn">
     <ul class="list pa0 mv4 lh-copy">
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#strategy" data-scroll>Strategy</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#design" data-scroll>Design</a></li>
-      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#technology" data-scroll>Technology</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#digital" data-scroll>Digital</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#analog" data-scroll>Analog</a></li>
+      <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="#shop" data-scroll>Shop</a></li>
     </ul>
-  </nav> -->
+  </nav>
   <address class="fs-normal wow animated fadeInUp">
     <ul class="list pa0 mv4 lh-copy">
       <li class="dib mr2"><a class="link underline-hover dark-gray" href="mailto:hello@studiocraft.cc"><abbr title="Email"><i class="fa fa-fw fa-envelope" aria-hidden="true"></i></abbr>hello@studiocraft.cc</a></li>
