--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -4,5 +4,5 @@
 <meta name="description" content="{{ site.summary | truncate:140 }}">
 <meta name="keywords" content="{{ site.keywords }}">
 <meta name="author" content="Bryan Colosky">
-<title>{{ site.title }}{% if page.title != 'home' %} | {{ page.title }}{% endif %}</title>
+<title>{{ site.title }}{% if page.title != 'Home' %} | {{ page.title }}{% endif %}</title>
 {% include favicons.html %}
