--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,6 @@
     <li class="dib mr2"><a class="link underline-hover dark-gray b ttu" href="{{ site.baseurl }}/sitemap.html"><small>Sitemap</small></a></li>
   </ul>
   <small class="w-100 db measure mv2 lh-copy">Copyright<i class="fa fa-fw fa-copyright"></i>{{ site.time | date: "%Y" }} {{ site.title }}. All rights reserved.</small>
-  <small class="w-100 db measure mv4">Made in NY</small>
+  <small class="w-100 db measure mv4">Made in Brooklyn, NY.</small>
   <a class="db link underline-hover gray" href="#content" data-scroll><small>Back to Top</small></a>
 </footer>
