--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 {% if page.layout == 'page' %}
 {% include contact.html %}
 {% endif %}
-<footer class="w-100 ph3 ph4-ns pv4 pv6-ns wow animated fadeInUp">
+<footer class="w-100 tc tl-ns ph3 ph4-ns pv4 pv6-ns wow animated fadeInUp">
   <ul class="list pl0 lh-copy">
     <li class="dib mr2">
       <a class="link underline-hover dark-gray b ttu" href="#">LinkedIn</a>
