--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="w-100 tc tl-ns ph3 ph4-ns pv5 pv6-ns bg-yellow">
-  <h1 class="f1 f-subheadline-m f-headline-l lh-title mv0 tracked-tight" data-action="cursor">{{ site.title }}</h1>
+  <h1 class="f1 f-subheadline-m f-headline-l lh-title mv0 tracked-tight pa2 ba bw2 b--near-black" data-action="cursor">{{ site.title }}</h1>
   <h2 class="f3 f2-ns mv0 lh-title">An independent design consultancy.</h2>
   <nav class="wow animated fadeIn">
     <ul class="list pa0 mv4 lh-copy">
