--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header class="w-100 tc tl-ns ph3 ph4-ns pv5 pv6-ns bg-yellow">
-  <h1 class="f1 f-subheadline-m f-headline-l lh-title tracked-tight mv4 ph3 ph4-ns ba bw3 bw4-ns b--dark-gray" data-action="cursor">{{ site.title }}</h1>
+<section class="w-100 tc tl-ns ph3 ph4-ns pv5 pv6-ns bg-yellow">
+  <h1 class="f1 f-subheadline-m f-headline-l lh-title tracked-tight mv0" data-action="cursor">{{ site.title }}</h1>
   <h2 class="f3 f2-ns mv0 lh-title">An independent design consultancy.</h2>
   <nav class="wow animated fadeIn">
     <ul class="list pa0 mv4 lh-copy">
@@ -17,4 +17,4 @@
       <li class="dib mr2"><a class="link underline-hover dark-gray" href="https://goo.gl/maps/ePAZK239wrC2" target="_blank"><abbr title="Location"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>Brooklyn, NY</a></li>
     </ul>
   </address>
-</header>
+</section>
